JDK 9+ fixes.
- Handle possible InaccessibleObjectException from setAccessible() invocations.
- Avoid deprecated Class.newInstance(); used Constructor.newInstance() instead.