@@ -51,7 +51,7 @@ public class SortedValidator extends AbstractValidator<Sorted, Object> {
             };
         } else {
             try {
-                comparator = this.annotation.comparator().newInstance();
+                comparator = this.annotation.comparator().getDeclaredConstructor().newInstance();
             } catch (ReflectiveOperationException e) {
                 this.setViolation(context, "Cannot instantiate comparator for @Sorted constraint: " + e);
                 return false;
